🔧 fix(index.css): adjust width of .api-modal-tabs to be 75vw on small screens to improve responsiveness 🔧 fix(ApiModal/index.tsx): remove unnecessary whitespace

--- a/src/frontend/src/index.css
+++ b/src/frontend/src/index.css
@@ -904,7 +904,7 @@ The cursor: default; property value restores the browser's default cursor style 
   }
 
   .api-modal-tabs {
-    @apply w-full h-full overflow-hidden text-center bg-muted rounded-md border
+    @apply lg:w-full h-full overflow-hidden text-center bg-muted rounded-md border sm:w-[75vw]
   }
   .api-modal-tablist-div {
     @apply flex items-center justify-between px-2
